# suite-os

./: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.js  .npmrc  .prettierignore  .prettierrc.cjs  CHANGELOG.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  DEVELOPMENT.md  INTEGRATION_README.md  LICENSE.md  Makefile  README.md  SUMMARY.md  bun.lockb  docker-compose.supabase.yaml  docker-compose.yaml  env.example  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  temp_dedup_patch.txt  turbo.json  vercel.json
apps/infra/: .env.example  CELERY_SETUP_COMPLETE.md  Dockerfile  README.md  celery_test_example.py  celeryapp.py  dashboard.py  justfile  main.py  pyproject.toml  requirements.txt  seed.sql  test.py
apps/infra/analytics/: __init__.py  contract_analytics.py  helpers.py  wallet_analytics.py
apps/infra/api/: __init__.py  dependencies.py
apps/infra/api/models/: __init__.py  (+2 more)
apps/infra/celery_tasks/: README.md  __init__.py  app.py  coordinator.py  tasks.py
apps/infra/config/: __init__.py  aws_config.py  logging_config.py  redis_config.py
apps/infra/dashboard/: __init__.py  api_client.py  app.py  config.py  contract_analytics.py  etl_management.py  wallet_analytics.py
apps/infra/db/: __init__.py  iceberg.py
apps/infra/docs/: address_import.md
apps/infra/models/: __init__.py  fetch_mode.py  time_period.py
apps/infra/providers/: etherscan_provider.py
apps/infra/scripts/: monitor_celery.sh  raw_etl.py  start_celery_worker.sh
apps/infra/static/: contracts.py
apps/infra/utils/: aws_config.py  blockchain.py
(+688 files in other folders)
